--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -14,6 +14,9 @@
     "com.unity.timeline": "1.7.5",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.1",
+    "com.unity.xr.interaction.toolkit": "2.4.3",
+    "com.unity.xr.management": "4.3.3",
+    "com.unity.xr.oculus": "4.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
